language/move-lang/tests/move_check/typing/continue_outside_loop.move
module M {
    foo() {
        while (true) {
            continue
        };
        continue
    }
}
